_blank bug fixed

--- a/app/src/main/res/menu/edit_menu.xml
+++ b/app/src/main/res/menu/edit_menu.xml
@@ -9,11 +9,11 @@
         android:title="@string/action_notice"
         app:showAsAction="ifRoom"/>
 
-    <item
-        android:id="@+id/action_share"
-        android:icon="@drawable/ic_action_share"
-        android:title="@string/action_share"
-        app:showAsAction="ifRoom"/>
+<!--    <item-->
+<!--        android:id="@+id/action_share"-->
+<!--        android:icon="@drawable/ic_action_share"-->
+<!--        android:title="@string/action_share"-->
+<!--        app:showAsAction="ifRoom"/>-->
 
     <item
         android:id="@+id/action_favorite"
