--- a/app/src/main/res/menu/sidebar.xml
+++ b/app/src/main/res/menu/sidebar.xml
@@ -9,79 +9,79 @@
             <menu>
                 <item
                     android:id="@+id/svt_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_users"
                     android:title="@string/svt_overview" />
                 <item
                     android:id="@+id/ce_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_street_view"
                     android:title="@string/ce_overview" />
                 <item
                     android:id="@+id/cc_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_expand"
                     android:title="@string/cc_overview" />
                 <item
                     android:id="@+id/weekly_mission"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_tasks"
                     android:title="@string/weekly_mission" />
                 <item
                     android:id="@+id/new_cards"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_certificate"
                     android:title="@string/new_cards" />
                 <item
                     android:id="@+id/simulate_gacha"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_dice"
                     android:title="@string/simulate_gacha" />
                 <item
                     android:id="@+id/quest"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_map"
                     android:title="@string/quest" />
                 <item
                     android:id="@+id/enemy_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_skull"
                     android:title="@string/enemy_overview" />
                 <item
                     android:id="@+id/items_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_cubes"
                     android:title="@string/items_overview" />
                 <item
                     android:id="@+id/skill_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_fire"
                     android:title="@string/skill_overview" />
                 <item
                     android:id="@+id/mst_equip"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_diagnoses"
                     android:title="@string/mst_equip" />
                 <item
                     android:id="@+id/clothes_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_tshirt"
                     android:title="@string/clothes_overview" />
                 <item
                     android:id="@+id/music_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_music"
                     android:title="@string/music_overview" />
                 <item
                     android:id="@+id/cv_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_microphone"
                     android:title="@string/cv_overview" />
                 <item
                     android:id="@+id/illust_overview"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_paint_brush"
                     android:title="@string/illust_overview" />
                 <item
                     android:id="@+id/jp_client_dl"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_download"
                     android:title="@string/jp_client_dl" />
                 <item
                     android:id="@+id/sponsor"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_hand_holding_heart"
                     android:title="@string/sponsor" />
                 <item
                     android:id="@+id/faq"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_graduation_cap"
                     android:title="@string/faq" />
                 <item
                     android:id="@+id/comment"
-                    android:icon="@mipmap/ic_launcher"
+                    android:icon="@drawable/ic_comment_slash"
                     android:title="@string/comment" />
             </menu>
         </item>
