--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Light"
-        app:headerLayout="@layout/nav_header_example"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/sidebar" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
