--- a/app/src/main/res/menu/edit_menu.xml
+++ b/app/src/main/res/menu/edit_menu.xml
@@ -7,7 +7,8 @@
         android:id="@+id/action_notice"
         android:icon="@drawable/ic_action_notice"
         android:title="@string/action_notice"
-        app:showAsAction="ifRoom"/>
+        android:visible="false"
+        app:showAsAction="ifRoom" />
 
 <!--    <item-->
 <!--        android:id="@+id/action_favorite"-->
