--- a/app/src/main/res/menu/edit_menu.xml
+++ b/app/src/main/res/menu/edit_menu.xml
@@ -27,4 +27,8 @@
     <item android:id="@+id/action_about"
         android:title="@string/action_about"
         app:showAsAction="never"/>
+
+    <item android:id="@+id/action_exit"
+        android:title="@string/action_exit"
+        app:showAsAction="never"/>
 </menu>
