--- a/app/src/main/res/layout/float_window.xml
+++ b/app/src/main/res/layout/float_window.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rlContent"
-    android:layout_width="360dp"
-    android:layout_height="400dp"
+    android:layout_width="300dp"
+    android:layout_height="300dp"
     android:background="@color/cardview_dark_background"
     android:orientation="vertical">
 
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:checked="true"
         android:theme="@style/MyCheckBox"
-        android:text="是否可拖拽"
+        android:text="@string/float_checkbox_state"
         android:textColor="@color/white" />
 
     <WebView
