--- a/app/src/main/res/layout/float_window.xml
+++ b/app/src/main/res/layout/float_window.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rlContent"
-    android:layout_width="300dp"
-    android:layout_height="300dp"
+    android:layout_width="250dp"
+    android:layout_height="250dp"
     android:background="@color/cardview_dark_background"
     android:orientation="vertical">
 
@@ -14,6 +14,7 @@
         android:layout_alignParentEnd="true"
         android:padding="10dp"
         android:src="@drawable/ic_x" />
+
     <CheckBox
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
@@ -22,6 +23,14 @@
         android:theme="@style/MyCheckBox"
         android:text="@string/float_checkbox_state"
         android:textColor="@color/white" />
+
+    <ImageView
+        android:id="@+id/ivFloatBallCheck"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:padding="10dp"
+        android:layout_toRightOf="@id/checkbox"
+        android:src="@drawable/ic_o" />
 
     <WebView
         android:id="@+id/float_webView"
@@ -39,5 +48,4 @@
         android:layout_alignParentBottom="true"
         android:padding="8dp"
         android:src="@drawable/ic_scale" />
-
 </RelativeLayout>
