--- a/app/src/main/res/layout/tab_layout_activity.xml
+++ b/app/src/main/res/layout/tab_layout_activity.xml
@@ -9,7 +9,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="58dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:orientation="vertical"
