--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -41,7 +41,11 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/my_toolbar" />
+        app:layout_constraintTop_toTopOf="@id/my_toolbar"
+        app:tabGravity="fill"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextColor="#fff" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_content"
