seperate multitab from mainactivity

--- a/app/src/main/res/layout/activity_diff.xml
+++ b/app/src/main/res/layout/activity_diff.xml
@@ -22,7 +22,7 @@
         android:layout_height="match_parent">
 
         <include
-            layout="@layout/app_bar_main"/>
+            layout="@layout/app_bar"/>
 
         <include
             layout="@layout/webview"/>
