--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,10 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="about_page_header_height">212dp</dimen>
+    <dimen name="about_page_avatar_size">38dp</dimen>
+    <dimen name="about_page_license_text_size">13sp</dimen>
+    <dimen name="about_page_recommendation_icon_size">48dp</dimen>
+    <dimen name="about_page_bottom_sheet_item_height">48dp</dimen>
+    <dimen name="about_page_item_category_padding_horizontal">16dp</dimen>
 </resources>
