--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -19,7 +19,10 @@
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round"
-        android:scaleType="centerInside"/>
+        android:clickable="true"
+        android:onClick="gotoUserPage"
+        android:scaleType="centerInside"
+        android:focusable="true" />
 
     <TextView
         android:id="@+id/nav_header_title"
