--- a/app/src/main/res/layout/webview.xml
+++ b/app/src/main/res/layout/webview.xml
@@ -8,5 +8,6 @@
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:hardwareAccelerated="false"/>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
